# -ContextForge

./: .gitignore  CONTRIBUTING.md  FINAL_FIX_REPORT.md  FIXES_CHANGELOG.md  README.md  SYSTEM_DOCUMENTATION.md
final/: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
final/scripts/: load_test.py
final/src/contextforge/: api_server.py  app.py  config.py  db_migrations.py  document_manager.py  memory_manager.py  metrics.py  observability.py  query_processor.py  rag_pipeline.py  storage_provider.py  tokenization.py
final/tests/: test_chapter_intents.py  test_config_quality.py  test_maintenance.py  test_memory_manager.py  test_pagination.py  test_performance.py  test_retrieval.py  test_security_scaling.py
